--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^4.0.9",
+    "graphql": "^16.12.0",
+    "graphql-ws": "^6.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router": "^7.8.2"
+    "react-router": "^7.8.2",
+    "rxjs": "^7.8.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
